WHWH SOME THINGS LIKNKED WRONG OOPS

--- a/daily/index.html
+++ b/daily/index.html
@@ -69,6 +69,7 @@
 
     <div class="tz-gallery">
 
+        <!-- this one is desktop i think-->
         <div class ="harry">
             <!-- 205px x 4 works   164px x 5 works-->
             <div class="row">
@@ -196,15 +197,15 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/013.png" 
-                        data-caption='no.013: "thematon" <h3>- ??/??/21</h3> '>
+                        data-caption='no.013: "thematon" <h3>- 06/27/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/013.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=t3vXa8iZo-s" 
-                        data-caption='no.014: "thematon ad" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=L_LbO6Z-TOw" 
+                        data-caption='no.014: "thematon ad" <h3>- 06/27/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/014.png" >
                         </a>
                     </div>
@@ -214,7 +215,7 @@
             </div>
         </div>
 
-
+<!-- difference between mobile and desktiop is the <br>s int hte titles-->
         <div class ="larry">
             <!-- 205px x 4 works   164px x 5 works-->
             <div class="row">
@@ -342,15 +343,15 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/013.png" 
-                        data-caption='no.013:<br> "thematon"<br> <h3>- ??/??/21</h3> '>
+                        data-caption='no.013:<br> "thematon"<br> <h3>- 06/27/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/013.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=t3vXa8iZo-s" 
-                        data-caption='no.014:<br> "thematon ad"<br> <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=L_LbO6Z-TOw" 
+                        data-caption='no.014:<br> "thematon ad"<br> <h3>- 06/27/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/014.png" >
                         </a>
                     </div>
