--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="row2 imgPixel">
             
               <p class="text-center">------------------------∞✧༺​♡༻✧∞------------------------
-              <a href="/blog/" class="navi" ><img src="images/nav/flow1.png">click for my daily artistic endeavors <img src="images/nav/flow1.png"></a>
+              <a href="/daily/" class="navi" ><img src="images/nav/flow1.png">click for my daily artistic endeavors <img src="images/nav/flow1.png"></a>
               ------------------------∞✧༺​♡༻✧∞------------------------</p>
 
               <div class="col-sm-3 col-md-2"><img src="images/home/z2.png" style="margin-left:18px;height:90px;" class="img-center"></div>
