--- a/lapse/index.html
+++ b/lapse/index.html
@@ -43,17 +43,17 @@
 
   <!-- Section --> 
         <div style="text-align:left;">
-              <button class="l-button w3-margin-bottom" onclick="document.getElementById('a').style.display='block'">
+              <button class="l-button w3-margin-bottom" onclick="document.getElementById('c').style.display='block'">
               <b style="font-size: 1.1em;">Aaa:</b> body text and whatnot 
               </button>
         </div>
         
         <br>
 
-    <div id="a" class="w3-modal">
+    <div id="c" class="w3-modal">
       <div class="w3-modal-content w3-animate-top w3-card-4">
         <header class="w3-container w3-teal w3-center w3-padding-32"> 
-          <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('a').style.display='none'">X<i class="fa fa-remove"></i></button>
+          <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('c').style.display='none'">X<i class="fa fa-remove"></i></button>
         
           <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Aaa</h3>
         </header>
@@ -116,24 +116,28 @@
 
 <!-- Section --> 
 <div style="text-align:center;">
-  <button class="l-button w3-margin-bottom" onclick="document.getElementById('c').style.display='block'">
-  <b style="font-size: 1.1em;">Cee</b> body text and whatnot 
-  </button>
+  <button class="l-button w3-margin-bottom" onclick="document.getElementById('a').style.display='block'">
+  <b style="font-size: 1.1em;">Custom "Twitter For"</b> -  now i can finally be cool on <span style="color:#b7ceff">twtr</span>!
 </div>
 
 <br>
 
-<div id="c" class="w3-modal">
+<div id="a" class="w3-modal">
 <div class="w3-modal-content w3-animate-top w3-card-4">
   <header class="w3-container w3-teal w3-center w3-padding-32"> 
-    <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('c').style.display='none'">X<i class="fa fa-remove"></i></button>
+    <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('a').style.display='none'">X<i class="fa fa-remove"></i></button>
   
-    <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Cee</h3>
+    <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Custom "Twitter For"</h3>
   </header>
   <div class="w3-container">
-    <p><label><i class="fa fa-shopping-cart"></i> Ticketsfdsafs per person</label></p>
+    <p>
+
+    </p>
   
-    <p><label><i class="fa fa-user"></i> Send To</label></p>
+    <p>
+
+    </p>
+  
     </div>
 </div>
 </div>
