--- a/lapse/index.html
+++ b/lapse/index.html
@@ -114,10 +114,17 @@
       </div>
 
 
+<!--onclick="document.getElementById('a').style.display='block'"-->
+    <div style=" margin-left:50px;">
+    <div class="imagetime" >
+     <img src="everything.png">   
+    </div>
+  </div>
+
 <!-- Section --> 
 <div style="text-align:center;">
   <button class="l-button w3-margin-bottom" onclick="document.getElementById('a').style.display='block'">
-  <b style="font-size: 1.1em;">Custom "Twitter For"</b> -  now i can finally be cool on <span style="color:#b7ceff">twtr</span>!
+  <b style="font-size: 1.1em;">Mortis Ghost</b> - a brief look into their lesser known <span style="color:#b7ceff">works</span> !
 </div>
 
 <br>
@@ -127,11 +134,13 @@
   <header class="w3-container w3-teal w3-center w3-padding-32"> 
     <button class="w3-button w3-red w3-section w3-display-topright" onclick="document.getElementById('a').style.display='none'">X<i class="fa fa-remove"></i></button>
   
-    <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Custom "Twitter For"</h3>
+    <h3 style="text-align: center;" class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Mortis Ghost"</h3>
   </header>
   <div class="w3-container">
+    <p><i>"I'm Mortis Ghost, hello. I'm making comics and stuff, speaking french and eating dinners. I had a magic dream about palm trees and that's all I have to say about me."</i></p>
+    
     <p>
-
+      Mortis Ghost 
     </p>
   
     <p>
