--- a/daily/index.html
+++ b/daily/index.html
@@ -233,15 +233,15 @@
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/016.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/017.png" 
-                        data-caption='no.017:<br class="larry"> "shin..."<br class="larry"> <h3>- 06/30/21</h3> '>
+                        data-caption='no.017:<br class="larry"> "[un]happy"<br class="larry"> <h3>- 06/30/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/017.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=L_LbO6Z-TOw" 
