--- a/lapse/index.html
+++ b/lapse/index.html
@@ -134,7 +134,7 @@
         </div>
 <div style="text-align:center;">
   <button class="l-button w3-margin-bottom" onclick="document.getElementById('a').style.display='block'">
-  <b style="font-size: 1.1em;">Mortis Ghost</b> - a brief look into his lesser known works !
+  <b style="font-size: 1.1em;">Mortis Ghost</b> - a brief look into a hit indie gamedev !
   <span class="quotey" style="font-size: .8em;"><br>    - 28 JUN 2021 </span></button>
 </div>
 
@@ -185,8 +185,9 @@
     <p>The first thing I played was a short 2012 game made in a weekend by eXaHeVa and Moris Ghost called
       <a target="_blank" href="http://gaarabis.free.fr/020_games/Picture/There%20Is%20A%20Picture.rar"><i>There Is A Picture</i></a>.
       It was a cute idea with simple graphics and a decent message, though not very complex, it is very impressive for such 
-      a short time of development. Its always interesting to me that a gamedev makes nothing for multiple years, but just puts
-      out a short game in a weekend.. bizarre!
+      a short time of development. I think it took just around 15 minutes to play.
+      Its always interesting to me when a gamedev makes nothing for multiple years, but then just puts
+      out a short game in a weekend.. wild~
     </p>
     <div style="text-align: center;">
       <img style="width:350px;" class="lazy" data-src="3.png">
@@ -196,7 +197,10 @@
     <p>It is pretty interesting that he often makes "simple" pixel art games, when his artistic style 
       is very professional and unique. Well that is what i thought until i found his comics! 
       He really went ham on these comics, they definitely feel very true to himself. I read
-      <a target="_blank" href="http://gaarabis.free.fr/index.php?catid=3"><i>Dr. Cataclysm</i></a>,
+      <a target="_blank" href="https://www.attaquesurprise.com/drcataclysmenglish"><i>Dr. Cataclysm</i></a>
+      (which I actually read the beginning
+      <a target="_blank" href="http://gaarabis.free.fr/index.php?catid=3">here</a>),
+
       which had an unique assortment of characters and an entertaining plotline, but definitely lacked some mainstaying elements
       to keep me interested. Additionally translations of <a target="_blank" href="https://www.attaquesurprise.com/"><i>Mekka Nikki</i></a> are
       available, though i have not read that one for myself.
@@ -205,6 +209,26 @@
       <img style="width:350px;" class="lazy" data-src="4.png">
       <span class="quotey" style="font-size: .95em;"><br>A page from Dr. Catacylsm.</span>
     </div>
+
+    <p>In addition to these, Mortis Ghost worked with many others making two other games,
+      Duplo, and FreePuzzle, which can be found <a target="_blank" href="http://gaarabis.free.fr/index.php?catid=1">here</a>.
+      He's also got two stylish blogs:
+      <a target="_blank" href="https://mortisghost.blogspot.com/">anticosmo97,6%</a> and
+      <a target="_blank" href="https://mortisghost.tumblr.com/">negacosmo2,3%</a>. Finally, he has a
+      <a target="_blank" href="https://www.patreon.com/mortisghost">patreon</a>
+      where I learned he is working on a new video game, with an armless protagonist?? I bet you're
+      thinking: "well thats cool ig but i noticed you explicitly never credited the creator of the games'
+      music."
+      Wow you are perceptive! Nice job! Yeah, all of his games have really great music, I wonder 
+      who made the soundtracks...   
+    </p>
+
+    <h3>Sidenote: Alias Conrad Coldwood</h2>
+
+
+      <p>Alias Conard Coldwood is the creator of the soundtracks for all Mortis Ghost games, and a very fascinating
+        individual. Due to most of Mortis' work being in French, it is trouble
+      </p>
 
     <p>- ren ​♡</p>
     <br><br><br><br>
