--- a/highlights/index.html
+++ b/highlights/index.html
@@ -44,8 +44,9 @@
       --><h1>Relevant Descriptions</h1>
         <p>—「01://Who am I?」<br>
       i am ren rose, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio" target="_blank">bio</a>.
-    but i could sum it all up by saying i am a 'technology enthusiast' since (mostly) all of my hobbies wouldn't be possible without tech (but please dont apply such a limiting description to me).
-  check the <a href="https://relivesight.com/blog" target="_blank">blog</a> for entries about what i've been working on~
+    but i could sum it all up by saying i am a 'technology enthusiast' since (mostly) all of my hobbies wouldn't be possible without tech.
+  check the <a href="https://relivesight.com/blog" target="_blank">blog</a> for entries about what i've been working on and <a href="https://relivesight.com/blog" target="_blank">the links page</a>
+  for my socials~
   </p>
         
     
