--- a/artlogs/index.html
+++ b/artlogs/index.html
@@ -58,6 +58,14 @@
 						</div>
                         
                         <div id="ccontent">
+                            <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/002.png" style="width: 160px;"/>
+                            <br><br><h3>Daily</h3>            <ol class="playlist_info">
+                                <li>my daily art creation <</li><br>
+                            </ol>
+                            <a href="/annex" class="label3">SEE MORE </a>
+                        </div>
+
+                        <div id="ccontent">
                             <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/21.jpg" style="width: 160px;"/>
                             <br><br><h3>Annex</h3>            <ol class="playlist_info">
                                 <li>imaginary discography page <</li><br>
