--- a/daily/index.html
+++ b/daily/index.html
@@ -241,15 +241,15 @@
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/017.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=L_LbO6Z-TOw" 
+                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=J1-lgxJSqDo" 
                         data-caption='no.018:<br class="larry"> "gmornin"<br class="larry"> <h3>- 07/01/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/018.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/019.png" 
