--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <a href="/sites" class="navi"><img src="images/nav/flow1.png">sites</a>
         <a href="/writing" class="navi"><img src="images/nav/flow1.png">writing</a>
         
-        <img src="images/nav/navi-vmfx1.png" class="naviBanners" style="margin-top:20px;">  
+        <img src="images/nav/navi-vmfx1.png" class="naviBanners" style="margin-top:20px;"> 
+        <a href="/daily" class="navi"><img src="images/nav/flow1.png">daily</a> 
         <a href="/artlogs" class="navi"><img src="images/nav/flow1.png">art</a>
         <a href="/manga" class="navi"><img src="images/nav/flow1.png">manga</a>
         <a href="/video" class="navi"><img src="images/nav/flow1.png">video</a>
