--- a/mobile/index.html
+++ b/mobile/index.html
@@ -47,6 +47,7 @@
  
     
       <img src="../images/nav/navi-vmfx1.png" class="naviBanners" style="margin-top:20px;">
+      <a href="/daily" class="navi"><img src="../images/nav/flow1.png">daily</a>
         <a href="/artlogs" class="navi"><img src="../images/nav/flow1.png">art</a>
         <a href="/manga" class="navi"><img src="../images/nav/flow1.png">manga</a>
         <a href="/video" class="navi"><img src="../images/nav/flow1.png">video</a>
