--- a/highlights/index.html
+++ b/highlights/index.html
@@ -44,8 +44,11 @@
       --><h1>Relevant Descriptions</h1>
         <p>—「01://Who am I?」<br>
       i am ren rose, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio" target="_blank">bio</a>.
-    but i could sum it all up by saying i am a 'technology enthusiast' since (mostly) all of my hobbies wouldn't be possible without tech.
-  check the <a href="https://relivesight.com/blog" target="_blank">blog</a> for entries about what i've been working on and <a href="https://relivesight.com/blog" target="_blank">the links page</a>
+    but i could sum it all up by saying i am a 'technology enthusiast'
+    since (mostly) all of my hobbies wouldn't be possible without tech.
+  check my <a href="https://relivesight.com/blog" target="_blank">blog</a>
+  for entries about what i've been working on, <a href="https://relivesight.com/blog" target="_blank">lapse</a> for my random ramblings,
+  my <a href="https://relivesight.com/blog" target="_blank">daily art</a> page (for, you guessed it! daily art), and <a href="https://relivesight.com/blog" target="_blank">the links page</a>
   for my socials~
   </p>
         
@@ -67,24 +70,25 @@
           <li><a href="https://relivesight.com/projects/counter/" target="_blank">counter</a> - physical website pageview counter for my windowsil</li>
 
         </ul>
-        <p>now pages:</p>
+        <p>now pages im "proud" of:</p>
       <ul>
+        <li><a href="https://relivesight.com/daily/" target="_blank">daily</a> - daily art page </li>
         <li><a href="https://relivesight.com/annex/" target="_blank">annex</a> - fake discography "art" page </li>
         <li><a href="https://relivesight.com/athame/" target="_blank">project athame</a> - alternate reality "art"/story page </li>
-        <li><a href="https://relivesight.com/reference/wii/" target="_blank">wii softmod guide</a> - decent guide to softmodding your wii</li>
+        <li><a href="https://relivesight.com/writing/" target="_blank">writing</a> - where i write reviews and stuff</li>
+ <li><a href="https://relivesight.com/reference/wii/" target="_blank">wii softmod guide</a> - decent guide to softmodding your wii</li>
         <li><a href="https://relivesight.com/studylogs/datamosh/" target="_blank">datamoshing</a> - video datamoshing tutorial</li>
         <li><a href="https://relivesight.com/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
         <li><a href="https://relivesight.com/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
         <li><a href="https://relivesight.com/book/" target="_blank">book</a> - 1 million 'words' honestly just so i can say im a published author haha</li>
         <li><a href="https://relivesight.com/concept/chat/" target="_blank">chat</a> - a hidden chat page to connect you to other re:live members anonymously / no one uses it but im proud of it</li>
-        <li><a href="https://relivesight.com/writing/" target="_blank">writing</a> - where i write reviews and stuff</li>
-      </ul>
+             </ul>
         <p>
         of course there is plenty more to explore, but i'll leave that too you if you are still interested<br>
      </p>
   
      <p>—「03://Off Site "Achievements"」<br>
-     some of these will be linked to elsewhere, but here is a little hub of some of my 'achievements/feats'. it could also be that i made this section with the hope it encourages me to
+     some of these will be linked to elsewhere, but here is a little hub of some of my silly 'achievements/feats'. it could also be that i made this section with the hope it encourages me to
      increase the amount of things here, best of luck to (future) present me then! (sr) = speedrun, all runs reflect their place at the time, places may have changed.
      </p>
      <ul>
