--- a/mobile/index.html
+++ b/mobile/index.html
@@ -32,6 +32,7 @@
       <h1 style="margin-bottom:10px;margin-top:5px;"><img src="../images/home/1.png" width="50px class="img-center img-title"></h1>
       <img src="../images/nav/navig-main1.png" class="naviBanners">
       <a href="/bio" class="navi"><img src="../images/nav/flow1.png">bio</a>
+      <a href="/lapse" class="navi"><img src="../images/nav/flow1.png">lapse</a>
       <a href="/blog" class="navi"><img src="../images/nav/flow1.png">blog</a>
       <a href="/highlights" class="navi"><img src="../images/nav/flow1.png">highlights</a>
             <a href="/reference" class="navi"><img src="../images/nav/flow1.png">reference</a>
@@ -72,6 +73,16 @@
       <p>this mobile site is a quite simplified version of the desktop, hopefully it functions enough. thanks for visiting! stop by the
         <a href="/highlights/">highlights</a> page if you are new! or don't that's cool too┈
       </p>
+      
+            <!-- look below dummy -->
+            <p>┈ 65,427 page views ​♡ {updates daily}</p>
+            <!-- for those of you checking the code to see how i did the page view counter 
+            i have a script that accesses my local hosted server for the current view count
+            and edits this html code accordingly, then its up to me to push the update.
+            as seen in my project relivesight.com/projects/counter/ i do have an
+            actual counter that updates every minute but i couldnt figure out how to
+            seemlessly incorporate it without giving away my home ip address. 
+            sorry i bet you were expecting something cool-->
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
