--- a/night/index.html
+++ b/night/index.html
@@ -88,7 +88,7 @@
           <div class="col-sm-12">
             <h1>『Re:Live Night』</h1>
             <center>
-              <p>(archived: old style homepage)</p>
+              <p>(archived: old homepage, not updated.)</p>
             <p>no matter where you go, everyone's connected. welcome to my connection, stop by the
             <a href="../highlights/">highlights</a> page if you are new! or don't that's cool too┈</p>
           </center>
