--- a/re/side.html
+++ b/re/side.html
@@ -5,8 +5,9 @@
 <a href="https://relivesight.com/">--------------</a>
 <a href="https://relivesight.com/personal/">Personal Logs</a>
 <ul>
-<li><a href="https://relivesight.com/blog/">blog</a></li>
 <li><a href="https://relivesight.com/bio/">bio</a></li>
+<li><a href="https://relivesight.com/lapse/">lapse</a></li>
+<li><a href="https://relivesight.com/blog/">blog</a></li>
 <li><a href="https://relivesight.com/highlights/">highlights</a></li>
 <li><a href="https://relivesight.com/lists/">lists</a></li>
 <li><a href="https://relivesight.com/video/">videos</a></li>
