--- a/sites/index.html
+++ b/sites/index.html
@@ -34,7 +34,7 @@
 
     <h2>☆TONS☆OF☆FUN☆WEBSITES☆</h2>
     <p>—「0X://Explanation」<br>
-      Plenty of fun, useful, and otherwise interesting websites to check out at your own leisure. Hopefully this becomes a useful, plentiful resource, but i imagine it'll mostly remain the empty cabinets of what was on my mind when it was conceived.
+      plenty of fun, useful, and otherwise interesting websites to check out at your own leisure. hopefully this becomes a useful, plentiful resource, but i imagine it'll mostly remain the empty cabinets of what was on my mind when it was conceived.
       </p>
       <p><a id="back" href="https://relivesight.com/">back home</a></p>
 
