--- a/mobile/index.html
+++ b/mobile/index.html
@@ -90,6 +90,10 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
 
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">07/01/21 </h3>
+          <p style="margin-bottom:30px;">GRAPHIC DESIGN IS DUMB CODING IS DUMB ALL I WANT IS REVENGE</p>
+        </div>
 
 
         <div class="col-sm-9 col-md-offset-1">
@@ -98,7 +102,7 @@
         </div>
 
        <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">04/27/20 </h3>
+          <h3 style="margin-bottom:10px;">04/27/21 </h3>
           <p style="margin-bottom:30px;">update: ver.1.22474487139...</p>
         </div>
 
@@ -109,7 +113,7 @@
         </div>
 
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">03/17/20</h3>
+          <h3 style="margin-bottom:10px;">03/17/21</h3>
           <p style="margin-bottom:30px;">includes a (working?) set of eyes, contrary to the lore</p>
         </div>
 
