--- a/daily/index.html
+++ b/daily/index.html
@@ -301,15 +301,15 @@
                         </a>
                     </div>
                 </div>
-                <!--
+                
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=q9kfDENUuIU" 
+                        <a  class="lightbox" target="_blank" href="https://youtu.be/_JZSktHdi5U" 
                         data-caption='no.022:<br class="larry"> "thanks ​♡"<br class="larry"> <h3>- 07/05/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/022.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/023.png" 
