--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             <img class="logo" style="width:500px;" src="images/home/tumble.png" />
             
             <!-- look below dummy -->
-            <p>┈ 65,495 page views ​♡ {updates daily} ​┈</p>
+            <p>┈ 65,497 page views ​♡ {updates daily} ​┈</p>
             <!-- for those of you checking the code to see how i did the page view counter 
             i have a script that accesses my local hosted server for the current view count
             and edits this html code accordingly, then its up to me to push the update.
             as seen in my project relivesight.com/projects/counter/ i do have an
             actual counter that updates every minute but i couldnt figure out how to
-            seemlessly incorporate it without giving away my home ip address. 
+            seamlessly incorporate it without giving away my home ip address. 
             sorry i bet you were expecting something cool-->
             <img class="logo" src="images/home/d1.webp" />  </center>
             <div class="row2 imgPixel">
