--- a/daily/index.html
+++ b/daily/index.html
@@ -365,7 +365,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/026.a.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/027.png" 
@@ -381,7 +381,160 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/027.a.png" >
                         </a>
                     </div>
+                </div><!--
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/028.png" 
+                        data-caption='no.028:<br class="larry"> "scream."<br class="larry"> <h3>- 07/11/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/028.png" >
+                        </a>
+                    </div>
                 </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/029.png" 
+                        data-caption='no.029:<br class="larry"> "lets all love."<br class="larry"> <h3>- 07/12/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/029.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/030.png" 
+                        data-caption='no.030:<br class="larry"> "recede.iv<br class="larry"> (C3L3STIAL天の-knockoff)"<br class="larry"> <h3>- 07/13/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/030.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/031.png" 
+                        data-caption='no.031:<br class="larry"> "r4x3envy"<br class="larry"> <h3>- 07/14/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/031.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/032.png" 
+                        data-caption='no.032:<br class="larry"> "19 again"<br class="larry"> <h3>- 07/15/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/032.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/033.png" 
+                        data-caption='no.033:<br class="larry"> "modernity"<br class="larry"> <h3>- 07/16/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/033.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/034.png" 
+                        data-caption='no.034:<br class="larry"> "DHEC"<br class="larry"> <h3>- 07/17/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/034.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/035.png" 
+                        data-caption='no.035:<br class="larry"> "luminosity"<br class="larry"> <h3>- 07/18/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/035.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/036.png" 
+                        data-caption='no.036:<br class="larry"> "09.09.2029"<br class="larry"> <h3>- 07/19/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/036.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/036.1.png" 
+                        data-caption='no.036.1:<br class="larry"> "09.09.2029.1"<br class="larry"> <h3>- 07/19/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/036.1.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/036.a.png" 
+                        data-caption='no.036.a:<br class="larry"> "09.09.2029.alt"<br class="larry"> <h3>- 07/19/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/036.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/036.1.a.png" 
+                        data-caption='no.036.1.a:<br class="larry"> "09.09.2029.1.alt"<br class="larry"> <h3>- 07/19/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/036.1.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/037.png" 
+                        data-caption='no.037:<br class="larry"> "ᴠᴇɴᴛɪʟᴀᴛɪᴏɴ"<br class="larry"> <h3>- 07/20/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/037.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/037.1.png" 
+                        data-caption='no.037.1:<br class="larry"> "ᴠᴇɴᴛɪʟᴀᴛɪᴏɴ.1"<br class="larry"> <h3>- 07/20/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/037.1.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/037.a.png" 
+                        data-caption='no.037.a:<br class="larry"> "ᴠᴇɴᴛɪʟᴀᴛɪᴏɴ.ᴀʟᴛ"<br class="larry"> <h3>- 07/20/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/037.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/037.1.a.png" 
+                        data-caption='no.037.1.a:<br class="larry"> "ᴠᴇɴᴛɪʟᴀᴛɪᴏɴ.1.ᴀʟᴛ"<br class="larry"> <h3>- 07/20/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/037.1.a.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/039.png" 
+                        data-caption='no.038:<br class="larry"> "experiment"<br class="larry"> <h3>- 07/21/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/039.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/038.png" 
+                        data-caption='no.039:<br class="larry"> "𝓪𝓷𝓰𝓮𝓵𝓲𝓼𝓶"<br class="larry"> <h3>- 07/22/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/38.png" >
+                        </a>
+                    </div>
+                </div>
+                <div style="width:128px;" class="col-sm-12 col-md-4">
+                    <div class="sign">
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/038.a.png" 
+                        data-caption='no.039.a:<br class="larry"> "𝓪𝓷𝓰𝓮𝓵𝓲𝓼𝓶-𝒶𝓁𝓉"<br class="larry"> <h3>- 07/22/21</h3> '>
+                            <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/038.a.png" >
+                        </a>
+                    </div>
+                </div>
+                
                 -->
                 
 
