--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -93,7 +93,7 @@
           <p>Status:</p>
         
           <table class="tableizer-table">
-            <tr><td><center>Total Game Count: 564</center></td></tr>
+            <tr><td><center>Total Game Count: 565</center></td></tr>
                <tr><td>Estimated List Completeness: ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱ 75%</td></tr>
             </tbody></table>  
 
@@ -110,6 +110,7 @@
                <tr><td class="ong">Oxenfree</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="ong">Soma</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="ong">The Binding of Isaac: Rebirth</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td class="ong">Resident Evil Revelations 2</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                
 
                <tr><td class="onh">Super Mario 64</td><td>N</td><td>Y</td><td>N64</td><td>N</td><td>&nbsp;</td></tr>
