--- a/highlights/index.html
+++ b/highlights/index.html
@@ -48,7 +48,7 @@
     since (mostly) all of my hobbies wouldn't be possible without tech.
   check my <a href="https://relivesight.com/blog" target="_blank">blog</a>
   for entries about what i've been working on, <a href="https://relivesight.com/blog" target="_blank">lapse</a> for my random ramblings,
-  my <a href="https://relivesight.com/blog" target="_blank">daily art</a> page (for, you guessed it! daily art), and <a href="https://relivesight.com/blog" target="_blank">the links page</a>
+  my <a href="https://relivesight.com/cherry/daily" target="_blank">daily art</a> page (for, you guessed it! daily art), and <a href="https://relivesight.com/blog" target="_blank">the links page</a>
   for my socials~
   </p>
         
