--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -11,9 +11,9 @@
     <!--<link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">-->
     <link rel="stylesheet" href="box.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/png" href="../images/home/1.png" sizes="1000x1000" />
+    <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：Ｌｉｖｅ」</title>
+    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -27,49 +27,24 @@
 <body>
 
 <div class="container gallery-container">
+    <h1><div class="carry"><img style="width:300px; margin-bottom:15px;" src="../cherry-save.png" >
+    <a href="https://relivesight.com/cherry">PORTFOLIO</a>
+    <a href="https://relivesight.com/cherry/daily">DAILY</a>
+    <a href="https://relivesight.com/cherry/contact">CONTACT</a>
+    <a href="https://relivesight.com/cherry/shop">SHOP</a>
+    </div></h1>
 
-    <h1><span style="color:#f8ffee">ONE</span>
-         CREATION A
-        <span style="color:#fff5e0">DAY.</span>
-        EVERY <span style="color:#fff5e0">DAY.</span></h1>
-
-
-
-    <p class="page-description text-center">
-   
-    [official start date]: {JUN 15 2021} [current day]: {NO.25}<br><br>
-    this is my challenge to myself to grow and expand my knowledge of
-    <span style="color:#f8ffee">3d modelling</span>,
-    <span style="color:#fff5e0">video editing</span>,
-    <span style="color:#f8ffee">digital design</span>,
-    <span style="color:#fff5e0">environment rendering</span>,
-    <span style="color:#f8ffee">music production</span>,
-    and more. ty~ for taking a
-    look, and even more so if you have provided me support ​♡
-    <br><br>
-    the tools utilized include, but are not limited to: 
-    <span style="color:#f8ffee">adobe after effects</span>,
-    <span style="color:#fff5e0">element 3d</span>,
-    <span style="color:#f8ffee">adobe photoshop</span>,
-    <span style="color:#fff5e0">blender</span>,
-    <span style="color:#f8ffee">autodesk fusion 360</span>,
-    <span style="color:#fff5e0">cinema 4d</span>,
-    <span style="color:#f8ffee">visual studio code</span>,
-    <span style="color:#fff5e0">ableton live 10 suite</span>,
-    and will consist of
-    video, image, physical, and audio formats. 
-
-    <br><br>
-   
-    <img style="width:18px" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/x-square.png" > -
-    represents an video, which links to youtube upon click. (invisible in focused view)
-    </p>
     
-    <div class ="larry">
-        <p>[this mobile page isn't as good sry]</p>
-        <br><br>
-    </div>
 
+    <h2>[Daily Art]</h2>
+    <p class="page-description text-center">
+   [official start date]: {jun 15 2021} [current day]: {no.30} 
+   
+   <br><br>
+   [tools utilized]: after effects / element 3d / photoshop / blender /
+   autodesk fusion 360 / cinema 4d / visual studio code / ableton live 10 suite / [x]: video link
+    </p>
+    <br>
     <div class="tz-gallery">
 
         <!-- this one is desktop i think-->
@@ -397,7 +372,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/029.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/030.png" 
@@ -405,7 +380,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/030.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/031.png" 
@@ -544,7 +519,7 @@
 
     
     </div>
- <p class="page-description"><a class="yoyo" href="https://relivesight.com/">back home</a>
+ <p class="page-description"><a class="yoyo" href="https://relivesight.com/">/return.main/</a>
         <br><br>
         </p>  
 </div>
