--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <img class="logo" style="width:500px;" src="images/home/tumble.png" />
             
             <!-- look below dummy -->
-            <p>┈ 65,582 page views ​♡ {updates daily} ​┈</p>
+            <p>┈ 66,829 page views ​♡ {updates daily} ​┈</p>
             <!-- for those of you checking the code to see how i did the page view counter 
             i have a script that accesses my local hosted server for the current view count
             and edits this html code accordingly, then its up to me to push the update.
@@ -113,7 +113,7 @@
             <div class="row2 imgPixel">
             
               <p class="text-center">------------------------∞✧༺​♡༻✧∞------------------------
-              <a href="/daily/" class="navi" ><img src="images/nav/flow1.png">click for my daily artistic endeavors <img src="images/nav/flow1.png"></a>
+              <a href="/cherry/daily/" class="navi" ><img src="images/nav/flow1.png">click for my daily artistic endeavors <img src="images/nav/flow1.png"></a>
               ------------------------∞✧༺​♡༻✧∞------------------------</p>
 
               <div class="col-sm-3 col-md-2"><img src="images/home/z1.png" class="img-center"></div>
