--- a/artlogs/index.html
+++ b/artlogs/index.html
@@ -62,7 +62,7 @@
                             <br><br><h3>Daily</h3>            <ol class="playlist_info">
                                 <li>my daily art creation <</li><br>
                             </ol>
-                            <a href="/annex" class="label3">SEE MORE </a>
+                            <a href="/cherry/daily" class="label3">SEE MORE </a>
                         </div>
 
                         <div id="ccontent">
@@ -81,14 +81,14 @@
                             <a href="/athame" class="label3">READ MORE </a>
                         </div>
 
-
+<!--
                         <div id="ccontent">
                             <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/art/3.0.jpg" style="width: 160px;"/>
                             <br><br><h3>My Art</h3>            <ol class="playlist_info">
                                 <li>arts that i make <</li><br>
                             </ol>
                             <a href="/art" class="label3">SEE MORE </a>
-
+-->
 
                     </div>
 	
