--- a/re/side.html
+++ b/re/side.html
@@ -26,11 +26,12 @@
   
 <a href="https://relivesight.com/artlogs/">Art Logs</a>
   <ul>
-    <li><a href="https://relivesight.com/daily/">daily</a></li>
+    <li><a href="https://relivesight.com/cherry/">portfolio</a></li>
+    <li><a href="https://relivesight.com/cherry/daily/">daily</a></li>
     <li><a href="https://relivesight.com/annex/">annex</a></li>
     <li><a href="https://relivesight.com/athame/">project athame</a></li>
   <li><a href="https://relivesight.com/edits/">anime edits</a></li>
-  <li><a href="https://relivesight.com/art/">my "art"</a></li>
+  <!--<li><a href="https://relivesight.com/art/">my "art"</a></li>-->
   <li><a href="https://relivesight.com/manga/">manga</a></li>
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
