--- a/cherry/index.html
+++ b/cherry/index.html
@@ -43,7 +43,7 @@
     <br>[identity]: cherry / aletiune  / omnisai / ren
     <br>
     <br>[bio]: hi, im a 20 year old university student (computer science major) and aspiring digital artist, motion designer, video editor,
-    3d modeller, programmer, engineer, and amateur speedrunner
+    3d modeler, programmer, engineer, and amateur speedrunner
     <br>
    <br>[info]: a showcase of some of my work / images, videos, projects / count: 48
    <br>
