fixed on chrome

--- a/cherry/index.html
+++ b/cherry/index.html
@@ -179,10 +179,10 @@
             <div class="dw-pnl__cntnt tx--white bd--white tx--center">
                 <h2>[es]: <a target="_blank" href="https://relivesight.com/projects/arcade/">arcade controller</a></h2>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/8.jpg" class="dw-pnl__cntnt"/>
-            </div>
+            </div><!--
             <div class="dw-pnl ">
                 <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/portfolio/j.jpg" class="dw-pnl__cntnt"/>
-            </div>
+            </div>-->
             <div class="dw-pnl__cntnt tx--white bd--white tx--center">
                 <h2>[es]: <a target="_blank" href="https://relivesight.com/projects/433/">433% keyboard</a></h2>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/433/2.jpg" class="dw-pnl__cntnt"/>
